# decisphere-ai-env

./: Dockerfile  README.md  environment.py  grader.py  inference.py  models.py  openenv.yaml  push_all.py  pyproject.toml  requirements.txt  upload_to_hf.py
.github/workflows/: sync-to-hf.yml
decisphere_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/: app.py  invoice_env.py
tasks/task1/: grader.py  task.json
tasks/task2/: grader.py  task.json
tasks/task3/: grader.py  task.json
tasks/task4/: grader.py  task.json
tasks/task5/: grader.py  task.json
